[package]
edition.workspace = true
license = "Apache-2.0"
name = "xai-prompt-queue"
version = "0.1.0"
description = "Shared prompt-queue wire types for xai-grok-shell and xai-grok-pager"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
